--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,103 @@
-pandas==1.3.5
-snowflake==0.0.3
-snowflake_sqlalchemy==1.4.4
-SQLAlchemy==1.4.46
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asn1crypto==1.5.1
-certifi==2022.12.7
+attrs==22.2.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==6.0.0
 cffi==1.15.1
 charset-normalizer==2.1.1
-cryptography==39.0.0
+cramjam==2.6.2
+cryptography==38.0.4
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+docopt==0.6.2
+entrypoints==0.4
+fastjsonschema==2.16.2
+fastparquet==0.8.1
 filelock==3.9.0
+fsspec==2023.1.0
+greenlet==2.0.2
 idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+ipykernel==6.16.2
+ipython==7.34.0
+ipython-genutils==0.2.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+json5==0.9.11
+jsonschema==4.17.3
+jupyter-server==1.23.5
+jupyter_client==7.4.9
+jupyter_core==4.12.0
+jupyterlab==3.5.3
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.19.0
+kaggle==1.5.12
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mistune==2.0.4
+nbclassic==0.5.1
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.21.6
 oscrypto==1.3.0
+packaging==23.0
+pandas==1.3.5
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+pipreqs==0.4.11
+pkgutil_resolve_name==1.3.10
+prometheus-client==0.16.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
+ptyprocess==0.7.0
+py4j==0.10.9.5
+pyarrow==8.0.0
 pycparser==2.21
 pycryptodomex==3.16.0
+Pygments==2.14.0
 PyJWT==2.6.0
-pyOpenSSL==23.0.0
+pyOpenSSL==22.1.0
+pyrsistent==0.19.3
+pyspark==3.3.1
+python-dateutil==2.8.2
+python-slugify==7.0.0
 pytz==2022.7.1
+pyzmq==25.0.0
 requests==2.28.2
+scikit-learn==1.0.2
+scipy==1.7.3
+Send2Trash==1.8.0
+six==1.16.0
+sniffio==1.3.0
+snowflake-connector-python==2.9.0
+snowflake-sqlalchemy==1.4.4
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.46
+terminado==0.17.1
+text-unidecode==1.3
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tomli==2.0.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.8.1
 typing_extensions==4.4.0
 urllib3==1.26.14
-snowflake-connector-python==3.0.0
+wcwidth==0.2.6
+webencodings==0.5.1
+websocket-client==1.5.0
+yarg==0.1.9
+zipp==3.11.0
