--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altair==4.2.2
 anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
@@ -5,10 +6,16 @@ asn1crypto==1.5.1
 attrs==22.2.0
 Babel==2.11.0
 backcall==0.2.0
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.1
 bleach==6.0.0
+blinker==1.5
+boto3==1.26.68
+botocore==1.29.68
+cachetools==5.3.0
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
 cramjam==2.6.2
 cryptography==38.0.4
 debugpy==1.6.6
@@ -20,6 +27,8 @@ fastjsonschema==2.16.2
 fastparquet==0.8.1
 filelock==3.9.0
 fsspec==2023.1.0
+gitdb==4.0.10
+GitPython==3.1.30
 greenlet==2.0.2
 idna==3.4
 importlib-metadata==6.0.0
@@ -29,6 +38,7 @@ ipython==7.34.0
 ipython-genutils==0.2.0
 jedi==0.18.2
 Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.2.0
 json5==0.9.11
 jsonschema==4.17.3
@@ -39,8 +49,10 @@ jupyterlab==3.5.3
 jupyterlab-pygments==0.2.2
 jupyterlab_server==2.19.0
 kaggle==1.5.12
+markdown-it-py==2.1.0
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==2.0.4
 nbclassic==0.5.1
 nbclient==0.7.2
@@ -57,45 +69,61 @@ pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.4.0
 pipreqs==0.4.11
 pkgutil_resolve_name==1.3.10
 prometheus-client==0.16.0
 prompt-toolkit==3.0.36
+protobuf==3.20.3
 psutil==5.9.4
 ptyprocess==0.7.0
 py4j==0.10.9.5
 pyarrow==8.0.0
 pycparser==2.21
 pycryptodomex==3.16.0
+pydeck==0.8.0
 Pygments==2.14.0
 PyJWT==2.6.0
+Pympler==1.0.1
 pyOpenSSL==22.1.0
 pyrsistent==0.19.3
 pyspark==3.3.1
 python-dateutil==2.8.2
 python-slugify==7.0.0
 pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
 pyzmq==25.0.0
 requests==2.28.2
+rich==13.3.1
+s3transfer==0.6.0
 scikit-learn==1.0.2
 scipy==1.7.3
+semver==2.13.0
 Send2Trash==1.8.0
 six==1.16.0
+smmap==5.0.0
 sniffio==1.3.0
 snowflake-connector-python==2.9.0
 snowflake-sqlalchemy==1.4.4
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.46
+streamlit==1.17.0
 terminado==0.17.1
 text-unidecode==1.3
 threadpoolctl==3.1.0
 tinycss2==1.2.1
+toml==0.10.2
 tomli==2.0.1
+toolz==0.12.0
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.8.1
 typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
 urllib3==1.26.14
+validators==0.20.0
+watchdog==2.2.1
 wcwidth==0.2.6
 webencodings==0.5.1
 websocket-client==1.5.0
