--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@ primaryColor = "#4A90E2"
 backgroundColor = "#F4F4F4"
 secondaryBackgroundColor = "#E0E0E0"
 textColor= "#333333"
-font = "sans-serif"
+font = "sans serif
 
