Change the text color

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,6 @@
 primaryColor = "#4A90E2"
 backgroundColor = "#F4F4F4"
 secondaryBackgroundColor = "#E0E0E0"
-textColor= "#333333"
+textColor= "#ff0000"
 font = "sans serif"
 
